force-app/main/default/objects/Appointment__c/fields/Intake_Updated_for_Kept_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Intake_Updated_for_Kept_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Updated for Kept Appointment</label>
    <type>Checkbox</type>
</CustomField>