force-app/main/default/objects/Appointment__c/fields/Internal_Referral_Updated__c.field-meta.xml
<CustomField>
    <fullName>Internal_Referral_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Referral Updated</label>
    <type>Checkbox</type>
</CustomField>