force-app/main/default/objects/Appointment__c/fields/Is_Today__c.field-meta.xml
<CustomField>
    <fullName>Is_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Today</label>
    <type>Checkbox</type>
</CustomField>