force-app/main/default/objects/Appointment__c/fields/Last_Appointment_Floor_Staff__c.field-meta.xml
<CustomField>
    <fullName>Last_Appointment_Floor_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>In case the patient has been reassigned to a different floor staff user after the appointment was approved, this field will reference the last user who submitted the appointment for provider review.</description>
    <label>Last Appointment Floor Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appointments4</relationshipName>
    <type>Lookup</type>
</CustomField>