force-app/main/default/objects/Appointment__c/fields/Last_Final_Floor_Resubmission_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Final_Floor_Resubmission_Date__c</fullName>
    <label>Last/Final Floor Resubmission Date</label>
    <type>DateTime</type>
</CustomField>