force-app/main/default/objects/Appointment__c/fields/Lead_Source_Text__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Text__c</fullName>
    <formula>TEXT(Intake__r.LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>