force-app/main/default/objects/Appointment__c/fields/Marketing_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Event_Name__c</fullName>
    <formula>Intake__r.Marketing_Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Event Name</label>
    <type>Text</type>
</CustomField>