force-app/main/default/objects/Appointment__c/fields/Marketing_UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_UTM_Campaign__c</fullName>
    <label>Marketing - UTM Campaign</label>
    <type>TextArea</type>
</CustomField>