force-app/main/default/objects/Appointment__c/fields/Marketing_UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>Marketing_UTM_Content__c</fullName>
    <label>Marketing - UTM Content</label>
    <type>TextArea</type>
</CustomField>