force-app/main/default/objects/Appointment__c/fields/Marketing_UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>Marketing_UTM_Medium__c</fullName>
    <label>Marketing - UTM Medium</label>
    <type>TextArea</type>
</CustomField>