force-app/main/default/objects/Appointment__c/fields/Marketing_UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_UTM_Source__c</fullName>
    <label>Marketing - UTM Source</label>
    <type>TextArea</type>
</CustomField>