force-app/main/default/objects/Appointment__c/fields/Marketing_UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>Marketing_UTM_Term__c</fullName>
    <label>Marketing - UTM Term</label>
    <type>TextArea</type>
</CustomField>