force-app/main/default/objects/Appointment__c/fields/MD_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>MD_Follow_Up__c</fullName>
    <label>MD Follow Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Week</fullName>
            </value>
            <value>
                <fullName>2 Weeks</fullName>
            </value>
            <value>
                <fullName>3 Weeks</fullName>
            </value>
            <value>
                <fullName>4 Weeks</fullName>
            </value>
            <value>
                <fullName>PRN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>