force-app/main/default/objects/Appointment__c/fields/MD_Follow_Up_Reason__c.field-meta.xml
<CustomField>
    <fullName>MD_Follow_Up_Reason__c</fullName>
    <label>MD Follow Up Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post Imaging</fullName>
            </value>
            <value>
                <fullName>Post Procedure</fullName>
            </value>
            <value>
                <fullName>During Active Conservative Care</fullName>
            </value>
            <value>
                <fullName>PRN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>