force-app/main/default/objects/Appointment__c/fields/MD_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>MD_Next_Step__c</fullName>
    <label>Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Procedure and/or Surgery</fullName>
            </value>
            <value>
                <fullName>Active Conservative Care</fullName>
            </value>
            <value>
                <fullName>PRN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>