force-app/main/default/objects/Appointment__c/fields/Message_Left_By__c.field-meta.xml
<CustomField>
    <fullName>Message_Left_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Message Left By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>