force-app/main/default/objects/Appointment__c/fields/Message_Left_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Message_Left_Date_Time__c</fullName>
    <label>Message Left Date/Time</label>
    <type>DateTime</type>
</CustomField>