force-app/main/default/objects/Appointment__c/fields/Multiple_Patient_Records_Found__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Patient_Records_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used in the cleanup of the transition from NJS to AMG.  There are duplicate account records in SF, and this checkbox indicates the Care Cloud Patient Id found on the appointment record matches to more than one patient.</description>
    <label>Multiple Patient Records Found</label>
    <type>Checkbox</type>
</CustomField>