force-app/main/default/objects/Appointment__c/fields/New_Patient_Confirmation_Call__c.field-meta.xml
<CustomField>
    <fullName>New_Patient_Confirmation_Call__c</fullName>
    <label>New Patient Confirmation Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>New_Patient_Confirmation_Call</valueSetName>
    </valueSet>
</CustomField>