force-app/main/default/objects/Appointment__c/fields/No_Patient_Records_Found__c.field-meta.xml
<CustomField>
    <fullName>No_Patient_Records_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used in the cleanup of the transition from NJS to AMG.  In trying to validate that every patient is from the new Alliance Ortho instance, this checkbox indicates the Care Cloud Patient Id found on the appointment record does not match with any patient records in SF.</description>
    <label>No Patient Records Found</label>
    <type>Checkbox</type>
</CustomField>