force-app/main/default/objects/Appointment__c/fields/No_Precertification_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Precertification_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Precertification Required</label>
    <type>Checkbox</type>
</CustomField>