force-app/main/default/objects/Appointment__c/fields/Number_of_EOO_for_Patient__c.field-meta.xml
<CustomField>
    <fullName>Number_of_EOO_for_Patient__c</fullName>
    <formula>Patient__r.Number_of_EOO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of EOO for Patient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>