force-app/main/default/objects/Appointment__c/fields/Number_of_Open_Internal_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Internal_Referrals__c</fullName>
    <label>Number of Open Internal Referrals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>