force-app/main/default/objects/Appointment__c/fields/Number_of_VOB_s_from_Patient_Account__c.field-meta.xml
<CustomField>
    <fullName>Number_of_VOB_s_from_Patient_Account__c</fullName>
    <formula>Patient__r.Number_of_VOB_s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of VOB&apos;s from Patient Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>