force-app/main/default/objects/Appointment__c/fields/OT__c.field-meta.xml
<CustomField>
    <fullName>OT__c</fullName>
    <formula>BEGINS( Visit_Reason__c , &quot;OT&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OT</label>
    <type>Checkbox</type>
</CustomField>