force-app/main/default/objects/Appointment__c/fields/Out_of_Network_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Network_Deductible__c</fullName>
    <label>Out of Network Deductible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>