force-app/main/default/objects/Appointment__c/fields/Owner_for_filter__c.field-meta.xml
<CustomField>
    <fullName>Owner_for_filter__c</fullName>
    <description>For filtering in list view</description>
    <label>Owner for filter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>