force-app/main/default/objects/Appointment__c/fields/Owner_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_User_Id__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner User Id</label>
    <type>Text</type>
</CustomField>