force-app/main/default/objects/Appointment__c/fields/Patient_Chart_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Chart_Number__c</fullName>
    <label>Patient Chart Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>