force-app/main/default/objects/Appointment__c/fields/Patient_Has_No_PCP__c.field-meta.xml
<CustomField>
    <fullName>Patient_Has_No_PCP__c</fullName>
    <formula>Patient__r.No_PCP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Has No PCP</label>
    <type>Checkbox</type>
</CustomField>