force-app/main/default/objects/Appointment__c/fields/Patient_PCP__c.field-meta.xml
<CustomField>
    <fullName>Patient_PCP__c</fullName>
    <formula>Patient__r.PCP__r.FirstName + &quot; &quot; +  Patient__r.PCP__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient PCP</label>
    <type>Text</type>
</CustomField>