force-app/main/default/objects/Appointment__c/fields/Patient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Patient_Phone__c</fullName>
    <formula>Patient__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Phone</label>
    <type>Text</type>
</CustomField>