force-app/main/default/objects/Appointment__c/fields/Patient_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Patient_Record_Type__c</fullName>
    <formula>Patient__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Record Type</label>
    <type>Text</type>
</CustomField>