force-app/main/default/objects/Appointment__c/fields/Patient_s_Currently_Assigned_Staff__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Currently_Assigned_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient’s Currently Assigned Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appointments2</relationshipName>
    <type>Lookup</type>
</CustomField>