force-app/main/default/objects/Appointment__c/fields/Patient_SFID__c.field-meta.xml
<CustomField>
    <fullName>Patient_SFID__c</fullName>
    <formula>Patient__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient SFID</label>
    <type>Text</type>
</CustomField>