force-app/main/default/objects/Appointment__c/fields/Patient_Type__c.field-meta.xml
<CustomField>
    <fullName>Patient_Type__c</fullName>
    <label>Patient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net New</fullName>
            </value>
            <value>
                <fullName>Returning New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>