force-app/main/default/objects/Appointment__c/fields/Payer_Fee_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payer_Fee_Schedule__c</fullName>
    <formula>Text( VOB_Case__r.Fee_Schedule__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payer Fee Schedule</label>
    <type>Text</type>
</CustomField>