force-app/main/default/objects/Appointment__c/fields/Payment_Arrangement_Confirmed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Payment_Arrangement_Confirmed_Date_Time__c</fullName>
    <label>Payment Arrangement Confirmed Date/Time</label>
    <type>DateTime</type>
</CustomField>