force-app/main/default/objects/Appointment__c/fields/Person_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Record_Type__c</fullName>
    <formula>Patient__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Account Record Type</label>
    <type>Text</type>
</CustomField>