force-app/main/default/objects/Appointment__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <length>225</length>
    <type>Text</type>
</CustomField>