force-app/main/default/objects/Appointment__c/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Insurance</fullName>
            </value>
            <value>
                <fullName>Blue Cross Blue Shield</fullName>
            </value>
            <value>
                <fullName>Capitation</fullName>
            </value>
            <value>
                <fullName>Choice EPO</fullName>
            </value>
            <value>
                <fullName>Choice Plus</fullName>
            </value>
            <value>
                <fullName>Commercial Insurance</fullName>
            </value>
            <value>
                <fullName>Exclusive Provider Organization (EPO)</fullName>
            </value>
            <value>
                <fullName>Federal Employees Program</fullName>
            </value>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>Indemnity Insurance</fullName>
            </value>
            <value>
                <fullName>Medicaid HMO</fullName>
            </value>
            <value>
                <fullName>Medicare A</fullName>
            </value>
            <value>
                <fullName>Medicare B</fullName>
            </value>
            <value>
                <fullName>Medicare HMO</fullName>
            </value>
            <value>
                <fullName>Medicare POS</fullName>
            </value>
            <value>
                <fullName>Medicare PPO</fullName>
            </value>
            <value>
                <fullName>Medicare Supplement</fullName>
            </value>
            <value>
                <fullName>Open Access</fullName>
            </value>
            <value>
                <fullName>Other Federal Program</fullName>
            </value>
            <value>
                <fullName>Other Non-Federal Programs</fullName>
            </value>
            <value>
                <fullName>Out of State</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>Self Pay</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>