force-app/main/default/objects/Appointment__c/fields/PPT_Completed__c.field-meta.xml
<CustomField>
    <fullName>PPT_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PPT Completed</label>
    <type>Checkbox</type>
</CustomField>