force-app/main/default/objects/Appointment__c/fields/PPT_Due__c.field-meta.xml
<CustomField>
    <fullName>PPT_Due__c</fullName>
    <formula>Patient__r.PPT_Due_Date__c &lt;= Appointment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPT Due</label>
    <type>Checkbox</type>
</CustomField>