force-app/main/default/objects/Appointment__c/fields/PPT_Due_Date_Set__c.field-meta.xml
<CustomField>
    <fullName>PPT_Due_Date_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets the PPT Due Date on the patient record when a New Appointment is complete.</description>
    <label>PPT Due Date Set</label>
    <type>Checkbox</type>
</CustomField>