force-app/main/default/objects/Appointment__c/fields/Precert_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Precert_Appointment__c</fullName>
    <label>Precert Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Precertification_Appointment_Status</valueSetName>
    </valueSet>
</CustomField>