force-app/main/default/objects/Appointment__c/fields/Precert_Required_on_This_Visit__c.field-meta.xml
<CustomField>
    <fullName>Precert_Required_on_This_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Precert Required on This Visit</label>
    <type>Checkbox</type>
</CustomField>