force-app/main/default/objects/Appointment__c/fields/Precertification_Created__c.field-meta.xml
<CustomField>
    <fullName>Precertification_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Precertification Created</label>
    <type>Checkbox</type>
</CustomField>