force-app/main/default/objects/Appointment__c/fields/PriorityStatus__c.field-meta.xml
<CustomField>
    <fullName>PriorityStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PriorityStatus</label>
    <type>Checkbox</type>
</CustomField>