force-app/main/default/objects/Appointment__c/fields/Provider_Checklist_Created__c.field-meta.xml
<CustomField>
    <fullName>Provider_Checklist_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider Checklist Created</label>
    <type>Checkbox</type>
</CustomField>