force-app/main/default/objects/Appointment__c/fields/Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Id__c</fullName>
    <label>Provider Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>