force-app/main/default/objects/Appointment__c/fields/Provider_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Last_Name__c</fullName>
    <formula>RIGHT(SUBSTITUTE( Provider_Name__c ,&quot; &amp; &quot;,&quot;_&amp;_&quot;), LEN(SUBSTITUTE(Provider_Name__c,&quot; &amp; &quot;,&quot;_&amp;_&quot;)) - FIND(&quot; &quot;, SUBSTITUTE(Provider_Name__c,&quot; &amp; &quot;,&quot;_&amp;_&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Last Name</label>
    <type>Text</type>
</CustomField>