force-app/main/default/objects/Appointment__c/fields/Provider_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Provider_License_Number__c</fullName>
    <formula>Owner:User.License_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider License Number</label>
    <type>Text</type>
</CustomField>