force-app/main/default/objects/Appointment__c/fields/Provider_Name2__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name2__c</fullName>
    <formula>IF(
    CONTAINS(Provider_Name__c, &quot;Dr. &quot;),
    SUBSTITUTE(Provider_Name__c, &quot;Dr. &quot;, &quot;&quot;),
    SUBSTITUTE(Provider_Name__c, &quot;Dr.&quot;, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Name</label>
    <type>Text</type>
</CustomField>