force-app/main/default/objects/Appointment__c/fields/Provider_Note_to_Floor__c.field-meta.xml
<CustomField>
    <fullName>Provider_Note_to_Floor__c</fullName>
    <label>Provider Note to Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>