force-app/main/default/objects/Appointment__c/fields/Provider_Reviews_Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_Reviews_Business_ID__c</fullName>
    <label>Provider Reviews Business ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>