force-app/main/default/objects/Appointment__c/fields/Provider_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Provider_Specialty__c</fullName>
    <label>Provider Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acupuncturist</fullName>
            </value>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle Surgery</fullName>
            </value>
            <value>
                <fullName>Multi-Specialty</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Occupational Therapist</fullName>
            </value>
            <value>
                <fullName>Occupational Therapy Assistant</fullName>
            </value>
            <value>
                <fullName>Orthopaedic Surgery</fullName>
            </value>
            <value>
                <fullName>Orthopaedic Surgeryofthe Spine</fullName>
            </value>
            <value>
                <fullName>Pain Medicine</fullName>
            </value>
            <value>
                <fullName>Physical Therapist</fullName>
            </value>
            <value>
                <fullName>Physical Therapy</fullName>
            </value>
            <value>
                <fullName>Physical Therapy Assistant</fullName>
            </value>
            <value>
                <fullName>Physician Assistant</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>