force-app/main/default/objects/Appointment__c/fields/PT__c.field-meta.xml
<CustomField>
    <fullName>PT__c</fullName>
    <formula>BEGINS( Visit_Reason__c , &quot;PT&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT</label>
    <type>Checkbox</type>
</CustomField>