force-app/main/default/objects/Appointment__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <formula>TEXT(Intake__r.LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Source</label>
    <type>Text</type>
</CustomField>