force-app/main/default/objects/Appointment__c/fields/Referring_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Referring_Attorney__c</fullName>
    <formula>Intake__r.Personal_Injury_Attorney__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Attorney</label>
    <type>Text</type>
</CustomField>