force-app/main/default/objects/Appointment__c/fields/Referring_Physician_NPI__c.field-meta.xml
<CustomField>
    <fullName>Referring_Physician_NPI__c</fullName>
    <label>Referring Physician NPI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>