force-app/main/default/objects/Appointment__c/fields/Reimbursement_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reimbursement Trigger</label>
    <type>Checkbox</type>
</CustomField>