force-app/main/default/objects/Appointment__c/fields/Reimbursement_Type_text__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Type_text__c</fullName>
    <label>Reimbursement Type_text</label>
    <length>25</length>
    <type>Text</type>
</CustomField>