force-app/main/default/objects/Appointment__c/fields/Reimbursement_Type_Updated__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Type_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reimbursement Type Updated</label>
    <type>Checkbox</type>
</CustomField>