force-app/main/default/objects/Appointment__c/fields/Required_Resubmission_to_Provider__c.field-meta.xml
<CustomField>
    <fullName>Required_Resubmission_to_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Resubmission to Provider?</label>
    <type>Checkbox</type>
</CustomField>