force-app/main/default/objects/Appointment__c/fields/Secondary_VOB_Case__c.field-meta.xml
<CustomField>
    <fullName>Secondary_VOB_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary VOB Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Appointment (Secondary VOB Case)</relationshipLabel>
    <relationshipName>Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>